vlib/v/checker/tests/opaque_c_typedef_struct_field_err.vv
@[typedef]
struct C.Foo {}

type Foo = C.Foo

struct Bar {
	foo Foo
}

fn main() {}
